--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx sirv-cli dist --single --port 10000"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.2",
